@@ -42,7 +42,9 @@ by running "git annex sync" on the remote.
 
 * `--commit`, `--no-commit`
 
-  A commit is done by default. Use --no-commit to avoid committing local changes.
+  A commit is done by default (unless annex.autocommit is set to false).
+  
+  Use --no-commit to avoid committing local changes.
 
 * `--message=msg`
 
